RESOLVED FIXED165277
Web Inspector: Assertion Failures breakpoint should respect global Breakpoints enabled setting
https://bugs.webkit.org/show_bug.cgi?id=165277
Summary Web Inspector: Assertion Failures breakpoint should respect global Breakpoint...
Matt Baker
Reported 2016-12-01 14:17:52 PST
Summary: Assertion Failures breakpoint should respect global Breakpoints enabled setting. The other "special" breakpoints do, and the "Assertion Failures" breakpoint turns gray when breakpoints are disabled. Steps to Reproduce: 1. Inspect <script>console.assert(false)</script> 2. Debugger tab > Enable 'Assertion Failures' breakpoint 3. Disable all breakpoints (⌘Y) 4. Reload page Expected: => Nothing happens Actual: => Debugger pauses on assertion failure
Attachments
Patch (5.72 KB, patch)
2016-12-02 16:59 PST, Matt Baker
no flags
Radar WebKit Bug Importer
Comment 1 2016-12-01 14:18:05 PST
Matt Baker
Comment 2 2016-12-01 14:32:24 PST
Easy fix, going to add a couple tests though: inspector/debugger/break-on-assertion-failure.html inspector/debugger/breakpoints-enabled.html
Joseph Pecoraro
Comment 3 2016-12-01 14:58:25 PST
Doh, my bad. Great find!
Matt Baker
Comment 4 2016-12-01 18:35:52 PST
(In reply to comment #2) > Easy fix, going to add a couple tests though: > > inspector/debugger/break-on-assertion-failure.html Looks like inspector/debugger/pause-on-assert.html covers the basics.
Matt Baker
Comment 5 2016-12-02 16:59:36 PST
Mark Lam
Comment 6 2016-12-03 13:18:38 PST
Comment on attachment 296024 [details] Patch r=me
WebKit Commit Bot
Comment 7 2016-12-04 12:23:23 PST
Comment on attachment 296024 [details] Patch Clearing flags on attachment: 296024 Committed r209311: <http://trac.webkit.org/changeset/209311>
WebKit Commit Bot
Comment 8 2016-12-04 12:23:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.