Web Inspector: Assertion Failures breakpoint should respect global Breakpoints enabled setting https://bugs.webkit.org/show_bug.cgi?id=165277 <rdar://problem/29467098>

Reviewed by Mark Lam.

Source/JavaScriptCore:

* inspector/agents/InspectorDebuggerAgent.cpp:
(Inspector::InspectorDebuggerAgent::handleConsoleAssert):
Check that breakpoints are active before pausing.

LayoutTests:

New test for DebuggerManager.prototype.breakPointsEnabled.

* inspector/debugger/breakpoints-disabled-expected.txt: Added.
* inspector/debugger/breakpoints-disabled.html: Added.


Canonical link: https://commits.webkit.org/182986@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209311 268f45cc-cd09-0410-ab3c-d52691b4dbfc